[package]
name = "aod-2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01_1"
path = "src/01_1.rs"

[[bin]]
name = "01_2"
path = "src/01_2.rs"

[[bin]]
name = "02_1"
path = "src/02_1.rs"

[[bin]]
name = "02_2"
path = "src/02_2.rs"

[[bin]]
name = "03_1"
path = "src/03_1.rs"

[[bin]]
name = "03_2"
path = "src/03_2.rs"

[dependencies]
